[package]
name = "weighted-node-selection"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
rayon = ["rayon_crate"]

[dependencies]
dashmap = { version = "4", features = [ "rayon" ] }
murmur3 = "0.5"
rand = "0.8"
rayon_crate = { package= "rayon", version = "1", optional = true }
