[package]
name = "tagged-rendezvous"
description = "Rendezvous hashing with support for tag-based exclusions"
version = "0.1.0"
authors = ["Edward Shen <code@eddie.sh>"]
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/edward-shen/tagged-rendezvous"
keywords = ["tagged", "rendezvous", "node", "selection", "balancer"]
categories = ["concurrency", "data-structures"]
include = ["src"]

[features]
rayon = ["rayon_crate", "dashmap/rayon"]

[dependencies]
dashmap = "5"
murmur3 = "0.5"
rand = "0.8"
rayon_crate = { package = "rayon", version = "1", optional = true }

[profile.release]
lto = true
codegen-units = 1
